--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=EIMSDB;Username=postgres;Password=12345"
   },
+  "JwtSettings": {
+    "Secrect" : "daeruii343ho87dfhjdkfhdfjhre83hcvjkldfu9",
+    "Issuer" : "EIMS.API",
+    "Audience" : "EIMS.Client"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
