--- a/EIMS/EIMS.Application/EIMS.Application.csproj
+++ b/EIMS/EIMS.Application/EIMS.Application.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0" />
+    <PackageReference Include="BCrypt.Net-Next" Version="3.5.0" />
     <PackageReference Include="FluentValidation" Version="8.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.3.0" />
     <PackageReference Include="MediatR" Version="8.0.2" />
