--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=EIMSDB;Username=postgres;Password=12345"
+    //"DefaultConnection": "Host=localhost;Port=5432;Database=EIMSDB;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=EIMS-KKMS;Username=postgres;Password=1234"
   },
   "Logging": {
     "LogLevel": {
