--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost,Database=EIMS_DB;Username=postgres;Password=12345"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
