--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -2,6 +2,14 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost,Database=EIMS_DB;Username=postgres;Password=12345"
   },
+  "JwtSettings":
+  {
+    "Secrect" : "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
+    "Issuer" : "EIMS.API",
+    "Audience" : "EIMS.Client",
+    "AccessTokenExpirationMinutes" : 15,
+    "RefreshTokenExpirationDays" : 7
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
