--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost,Database=EIMS_DB;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=12345"
   },
   "JwtSettings":
   {
-    "Secrect" : "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
+    "Secret" : "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
     "Issuer" : "EIMS.API",
     "Audience" : "EIMS.Client",
     "AccessTokenExpirationMinutes" : 15,
