--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -10,6 +10,9 @@
     "AccessTokenExpirationMinutes" : 15,
     "RefreshTokenExpirationDays" : 7
   },
+  "AllowedOrigins": [
+    "https://your-production-frontend.com"
+  ],
   "Logging": {
     "LogLevel": {
       "Default": "Information",
