--- a/EIMS/EIMS.API/appsettings.Development.json
+++ b/EIMS/EIMS.API/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedOrigins": [
+    "http://localhost:3000",
+    "https://localhost:3001",
+    "http://localhost:4200"
+  ]
 }
