--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -2,13 +2,17 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=1234"
   },
-  "JwtSettings":
-  {
-    "Secret" : "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
-    "Issuer" : "EIMS.API",
-    "Audience" : "EIMS.Client",
-    "AccessTokenExpirationMinutes" : 15,
-    "RefreshTokenExpirationDays" : 7
+  "Cloudinary": {
+    "CloudName": "djz86r9zd",
+    "ApiKey": "319953617173836",
+    "ApiSecret": "LntfJ9m1L7tDSy8ijr8p2jf2Xho"
+  },
+  "JwtSettings": {
+    "Secret": "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
+    "Issuer": "EIMS.API",
+    "Audience": "EIMS.Client",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   },
   "AllowedOrigins": [
     "https://your-production-frontend.com"
