--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -2,17 +2,33 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=1234"
   },
-  "JwtSettings":
-  {
-    "Secret" : "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
-    "Issuer" : "EIMS.API",
-    "Audience" : "EIMS.Client",
-    "AccessTokenExpirationMinutes" : 15,
-    "RefreshTokenExpirationDays" : 7
+  "JwtSettings": {
+    "Secret": "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
+    "Issuer": "EIMS.API",
+    "Audience": "EIMS.Client",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   },
   "AllowedOrigins": [
     "https://your-production-frontend.com"
   ],
+  "Cloudinary": {
+    "CloudName": "djz86r9zd",
+    "ApiKey": "319953617173836",
+    "ApiSecret": "LntfJ9m1L7tDSy8ijr8p2jf2Xho"
+  },
+  "FileStorage": {
+    "Provider": "Cloudinary",
+    "MaxFileSizeBytes": 10485760,
+    "AllowedExtensions": [ ".pdf", ".docx", ".txt" ]
+  },
+  "EmailSettings": {
+    "Email": "hungndmse184183@fpt.edu.vn",
+    "Password": "pjbj ntvw hhlm cdlc",
+    "Host": "smtp.gmail.com",
+    "DisplayName": "Ky Nguyen So",
+    "Port": 587
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
