--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -29,6 +29,10 @@
     "DisplayName": "Ky Nguyen So",
     "Port": 587
   },
+  "Signature": {
+    "PfxPath": "D:\\EIMS-KMS\\EIMS\\EIMS.Application\\Commons\\XSDFiles\\TestCert.pfx",
+    "Password": "123456"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
