--- a/EIMS/EIMS.Application/EIMS.Application.csproj
+++ b/EIMS/EIMS.Application/EIMS.Application.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Commons\XSDFiles\HDon.xsd" />
+    <None Remove="Commons\XSDFiles\TDiep.xsd" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Commons\XSDFiles\HDon.xsd" />
+    <EmbeddedResource Include="Commons\XSDFiles\TDiep.xsd" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\EIMS.Domain\EIMS.Domain.csproj" />
   </ItemGroup>
 
@@ -21,6 +31,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.3.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.20" />
+    <PackageReference Include="QRCoder" Version="1.7.0" />
+    <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
