--- a/EIMS/EIMS.Application/EIMS.Application.csproj
+++ b/EIMS/EIMS.Application/EIMS.Application.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="FluentResults" Version="4.0.0" />
     <PackageReference Include="FluentValidation" Version="8.4.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.4.0" />
+    <PackageReference Include="Handlebars.Net" Version="2.0.0" />
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
