--- a/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
+++ b/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="MimeKit" Version="4.14.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
     <PackageReference Include="PdfPig" Version="0.1.11" />
+    <PackageReference Include="PuppeteerSharp" Version="18.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
   </ItemGroup>
 
