--- a/EIMS/EIMS.API/EIMS.API.csproj
+++ b/EIMS/EIMS.API/EIMS.API.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+     <None Update="template.html">
+    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+  </None>
   </ItemGroup>
 
   <ItemGroup>
