--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -36,7 +36,9 @@
     "DisplayName": "Ky Nguyen So",
     "Port": 587
   },
-
+  "FileSettings": {
+    "TemplateFolderPath": "Templates"
+  },
   "Signature": {
     "PfxPath": "D:\\EIMS-KMS\\EIMS\\EIMS.Application\\Commons\\XSDFiles\\TestCert.pfx",
     "Password": "123456"
