Fix certificate path and include pfx in build

--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -38,7 +38,7 @@
   },
 
   "Signature": {
-    "PfxPath": "D:\\EIMS-KMS\\EIMS\\EIMS.Application\\Commons\\XSDFiles\\TestCert.pfx",
+    "PfxPath": "Commons/XSDFiles/TestCert.pfx",
     "Password": "123456"
   },
   "Logging": {
