--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -40,7 +40,7 @@
     "TemplateFolderPath": "Templates"
   },
   "Signature": {
-    "PfxPath": "Commons/XSDFiles/TestCert.pfx",
+    "PfxPath": "Commons\\XSDFiles\\TestCert.pfx",
     "Password": "123456"
   },
   "Logging": {
