--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=1234"
+    "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=12345"
   },
   "JwtSettings": {
     "Secret": "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
@@ -40,7 +40,7 @@
     "TemplateFolderPath": "Templates"
   },
   "Signature": {
-    "PfxPath": "Commons\\XSDFiles\\TestCert.pfx",
+    "PfxPath": "Commons/XSDFiles/TestCert.pfx",
     "Password": "123456"
   },
   "Logging": {
