--- a/EIMS/EIMS.API/EIMS.API.csproj
+++ b/EIMS/EIMS.API/EIMS.API.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\EIMS.Infrastructure\EIMS.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Fonts\" />
+  </ItemGroup>
+
 </Project>
