fix : new mailersendAccount

--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -26,7 +26,7 @@
   },
   "EmailSettings": {
     "ApiToken": "",
-    "FromEmail": "noreply@test-51ndgwvk62xlzqx8.mlsender.net",
+    "FromEmail": "noreply@test-xkjn41mxx504z781.mlsender.net",
     "FromName": "EIMS System"
   },
   "EmailSMTPSettings": {
