fix : change email

--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -26,6 +26,7 @@
   },
   "EmailSettings": {
     "ApiToken": "",
+    "FromEmail": "mannvse181589@fpt.edu.vn",
     "FromName": "EIMS System"
   },
   "EmailSMTPSettings": {
