--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=12345"
+    "DefaultConnection": "Host=localhost;Database=EIMS_DB;Username=postgres;Password=1234"
   },
   "JwtSettings": {
     "Secret": "O1edRwoQvtmUtNzyjYEl6ww9o5bKOZG4",
@@ -33,7 +33,7 @@
     "Email": "hungndmse184183@fpt.edu.vn",
     "Password": "pjbj ntvw hhlm cdlc",
     "Host": "smtp.gmail.com",
-    "DisplayName": "Ky Nguyen So",
+    "DisplayName": "EIMS System",
     "Port": 587
   },
   "FileSettings": {
