--- a/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
+++ b/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
@@ -29,6 +29,8 @@
     <PackageReference Include="PdfPig" Version="0.1.11" />
     <PackageReference Include="PuppeteerSharp" Version="18.0.0" />
     <PackageReference Include="SendGrid" Version="9.0.10" />
+    <PackageReference Include="SkiaSharp" Version="3.116.0" />
+    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.116.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
   </ItemGroup>
 
