--- a/EIMS/EIMS.Application/EIMS.Application.csproj
+++ b/EIMS/EIMS.Application/EIMS.Application.csproj
@@ -42,4 +42,8 @@
     <PackageReference Include="System.Security.Cryptography.Xml" Version="10.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Minutes\Commands\" />
+  </ItemGroup>
+
 </Project>
