--- a/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
+++ b/EIMS/EIMS.Infrastructure/EIMS.Infrastructure.csproj
@@ -31,6 +31,8 @@
     <PackageReference Include="SendGrid" Version="9.0.10" />
     <PackageReference Include="SkiaSharp" Version="3.116.0" />
     <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.116.0" />
+    <PackageReference Include="Spire.Doc" Version="14.1.3" />
+    <PackageReference Include="Spire.PDF" Version="12.1.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.0.1" />
   </ItemGroup>
 
