fix : improve sale dashboard

--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -37,6 +37,10 @@
     "DisplayName": "EIMS System",
     "Port": 587
   },
+  "SalesSettings": {
+  "GlobalTargetRevenue": 600000000,
+  "GlobalCommissionRate": 2.5
+  },
   "FileSettings": {
     "TemplateFolderPath": "Templates"
   },
