--- a/EIMS/EIMS.API/appsettings.json
+++ b/EIMS/EIMS.API/appsettings.json
@@ -45,7 +45,7 @@
     "TemplateFolderPath": "Templates"
   },
   "Security": {
-    "EncryptionKey": ""
+    "EncryptionKey": "E546C8DF278CD5931069B522E695D4F2"
   },
   "Signature": {
     "PfxPath": "Commons/XSDFiles/TestCert.pfx",
