--- a/EIMS/EIMS.API/EIMS.API.csproj
+++ b/EIMS/EIMS.API/EIMS.API.csproj
@@ -31,6 +31,9 @@
      <None Update="Templates\InvoiceTemplate.xsl">
        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
      </None>
+     <None Update="Templates\PaymentTemplate.xsl">
+       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+     </None>
   </ItemGroup>
 
   <ItemGroup>
