--- a/EIMS/EIMS.API/EIMS.API.csproj
+++ b/EIMS/EIMS.API/EIMS.API.csproj
@@ -16,6 +16,12 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.2" />
+    <None Update="Fonts\arial.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Fonts\times.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
      <None Update="template.html">
     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
   </None>
